# scolo-app

./: .gcloudignore  .gcloudignore.web  .gitignore  Dockerfile  RUN_INSTRUCTIONS.md  cloudbuild-web.yaml  cloudbuild.yaml  deploy-backend.sh  start.sh  test_backend.py  test_skills.py
.claude/: CLAUDE.md  settings.json
.claude/skills/: README.md
.github/workflows/: deploy-backend.yml  deploy-web.yml  migrate.yml
backend/: Dockerfile  requirements.txt
backend/.claude/skills/: adverse-media.SKILL.md  geo-risk.SKILL.md  pep-screening.SKILL.md
backend/src/: claude_service.py
backend/src/api/: main.py
backend/src/tools/: __init__.py  adverse_media.py  business_registry.py  corporate_filings.py  court_records.py  domain_whois.py  education_verify.py  employment_verify.py  geo_risk.py  pep_check.py  phone_lookup.py  property_records.py  (+1 more)
backend/tests/: test_api.py
core/: Dockerfile  pyproject.toml  requirements.txt
core/.claude/skills/: sanctions-check.SKILL.md
core/src/api/: main.py
core/src/tools/: adverse_media.py  business_registry.py  crypto_trace.py  email_lookup.py  ip_geolocation.py  social_media.py  ubo_lookup.py
core/tests/: test_tools.py
supabase/: config.toml
web/: .gcloudignore  .gitignore  DEVELOPMENT.md  Dockerfile  cloudbuild.yaml  drizzle.config.ts  next.config.js  package-lock.json  package.json  proxy.ts  tsconfig.json  vercel.json
web/app/: globals.css  layout.tsx  page.tsx
web/drizzle/: 0000_woozy_jubilee.sql  0001_medical_tinkerer.sql
web/scripts/: check-migration-status.ts  migrate.ts  reset-database.ts  test-connection.ts
(+52 files in other folders)
